Schedule: fixed crampedness on iPhone 5 landscape.

--- a/app/css/schedule.sass
+++ b/app/css/schedule.sass
@@ -23,7 +23,7 @@ $bpad: $pad * 2
     border: solid 4px white
     box-shadow: 0 0 0 3px #eee
 
-  @media (min-width: 481px) /* Tablet & Desktop */
+  @media (min-width: 769px) // desktop
     .map.column
       +span-columns(6)
     .info.column
